@@ -4,10 +4,9 @@
 	<description>
 Eco-DB (Eiffel CHAIN Orientated Database)
 
-&apos;&apos;Eco-DB&apos;&apos; is an acronym for &apos;&apos;Eiffel CHAIN Orientated Database&apos;&apos;, and enables the
-development of container objects conforming to the base class
-[https://www.eiffel.org/files/doc/static/18.01/libraries/base/chain_chart.html CHAIN]
-to have many of the properties of relational database tables.
+&apos;&apos;Eco-DB&apos;&apos; is an acronym for &apos;&apos;Eiffel CHAIN Orientated Database&apos;&apos;. This library allows the extension (by inheritance)
+of a container object inheriting the base class [https://www.eiffel.org/files/doc/static/18.01/libraries/base/chain_chart.html CHAIN]
+so that it assumes many of the charateristics of a database table.
 
 See doc/eco-db.txt for details
 	</description>
