@@ -9,10 +9,9 @@ system:
 		"""
 			Eco-DB (Eiffel CHAIN Orientated Database)
 
-			''Eco-DB'' is an acronym for ''Eiffel CHAIN Orientated Database'', and enables the
-			development of container objects conforming to the base class
-			[https://www.eiffel.org/files/doc/static/18.01/libraries/base/chain_chart.html CHAIN]
-			to have many of the properties of relational database tables.
+			''Eco-DB'' is an acronym for ''Eiffel CHAIN Orientated Database''. This library allows the extension (by inheritance)
+			of a container object inheriting the base class [https://www.eiffel.org/files/doc/static/18.01/libraries/base/chain_chart.html CHAIN]
+			so that it assumes many of the charateristics of a database table.
 
 			See doc/eco-db.txt for details
 		"""
