@@ -7,19 +7,22 @@
 -->
 <system xmlns = "http://www.eiffel.com/developers/xml/configuration-1-16-0" xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation = "http://www.eiffel.com/developers/xml/configuration-1-16-0 http://www.eiffel.com/developers/xml/configuration-1-16-0.xsd" name = "EL_laabhair" uuid = "bed6fdc6-c730-11e8-83f1-07cc6249a405" library_target = "EL_laabhair">
 	<description>
-Laabhair Audio
+Laabhair Audio Analysis Framework
 
 **Status:** No longer maintained
 
-The Laabhair* Audio library was developed at the [https://arrow.dit.ie/dmc/ Digital Media Centre
-at the Dublin Institute of Technology] to do audio processing with Eiffel and present realtime graphics
+The &apos;&apos;Laabhair&apos;&apos;* audio analysis framework was developed at the
+[https://arrow.dit.ie/dmc/ Digital Media Centre at the Dublin Institute of Technology]
+to do audio analysis with Eiffel in real-time, presenting graphical
 audio representations using an [https://www.adobe.com/products/flashplayer.html Adobe Flash player] GUI.
 
-*Laabhair is the Gaelic for talk.
+(*&apos;&apos;Laabhair is the Gaelic for talk.&apos;&apos;)
+
+See doc/laabhair.txt for details
 	</description>
 	<target name = "EL_laabhair">
 		<root all_classes = "true"/>
 		<!--Classes-->
-		<cluster name = "EL_laabhair" location = "../multimedia/audio/laabhair"/>
+		<cluster name = "EL_laabhair" location = "multimedia/audio/laabhair"/>
 	</target>
 </system>
